src/ConfRoomApp/main/default/objects/Booking_Detail__c/Booking_Detail__c.object-meta.xml
<CustomObject>
    <label>Booking Detail</label>
    <nameField>
        <label>Booking Detail Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Booking Detail</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>