src/ConfRoomApp/main/default/objects/Booking_Detail__c/fields/Conference_Room__c.field-meta.xml
<CustomField>
    <fullName>Conference_Room__c</fullName>
    <label>Conference Room</label>
    <referenceTo>Conference_Room__c</referenceTo>
    <relationshipLabel>Booking Details</relationshipLabel>
    <relationshipName>Booking_Details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>