src/ConfRoomApp/main/default/objects/Booking_Detail__c/fields/Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Start_Time__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <label>Start Time</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>